--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@babel/runtime": "^7.1.2",
     "native-base": "^2.8.0",
     "react": "16.5.0",
-    "react-native": "0.57.1",
+    "react-native": "^0.57.7",
     "react-navigation": "^2.17.0"
   },
   "devDependencies": {
