--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "native-base": "^2.8.0",
-    "react": "16.5.0",
-    "react-native": "^0.57.7",
+    "react": "16.6.3",
+    "react-native": "0.57.8",
     "react-navigation": "^2.17.0"
   },
   "devDependencies": {
